# HsAdapton

./: Makefile  README.md  adapton.cabal  bench.hs  exadapton.hs  examples.hs  exbidirectional.hs  txadapton.hs
Control/Monad/: Adaptive.hs  Adapton.hs  BiAdapton.hs  Box.hs  IncrementalBX.hs  Ref.hs
Control/Monad/Adaptive/: CircularList.hs  DataTypes.hs  MonadUtil.hs  OrderedList.hs  PriorityQueue.hs  Ref.hs
Control/Monad/Adapton/: DataTypes.hs  Display.hs
Control/Monad/BiAdapton/: DataTypes.hs
Examples/: Customer.hs
GHC/: InOut.hs
Generics/Lenses/Symmetric/: Adaptive.hs  Adapton.hs  Language.hs
System/Mem/: MemoTable.hs
ctrie-0.1.0.2/Control/Concurrent/: Map.hs
hashtables-1.1.2.1/src/Data/HashTable/ST/: Basic.hs
src/: Debug.hs  adapton.cabal
src/Control/Concurrent/: Future.hs  Promise.hs  Transactional.hs
src/Control/Concurrent/Lock/: Exts.hs
src/Control/Concurrent/MVar/: Exts.hs
src/Control/Concurrent/Transactional/: Benchmark.hs  SHFSTM.hs  STM.hs  TMVar.hs  TxAdapton.hs
src/Control/Concurrent/Transactional/Internal/TxAdapton/: Algorithm (minfluence's conflicted copy 2015-04-28).hs  Algorithm.hs  Algorithm.hs-boot  Display.hs  Draw.hs  Layers.hs  Memo.hs  Types.hs
src/Control/Monad/: Incremental.hs  Lazy.hs  Transactional.hs
src/Control/Monad/Incremental/: Adapton.hs  Benchmark.hs  Display.hs  Draw.hs  Generics.hs  LazyNonInc.hs  List.hs  Tree.hs
src/Control/Monad/Incremental/Adapton/: Algorithm.hs  Display.hs  Draw.hs  Layers.hs  Memo.hs  Types.hs
src/Control/Monad/Incremental/Internal/Adapton/: Algorithm.hs  Display.hs  Draw.hs  Layers.hs  Memo.hs  Types.hs
src/Control/Monad/Incremental/Internal/LazyNonInc/: Algorithm.hs  Display.hs  Layers.hs  Memo.hs  Types.hs
src/Control/Monad/Incremental/LazyNonInc/: Algorithm.hs  Display.hs  Layers.hs  Memo.hs  Types.hs
src/Control/Monad/Ref/: Exts.hs
src/Control/Monad/Transactional/: Benchmark.hs  STM.hs  TxAdapton.hs
src/Control/Monad/Transactional/TxAdapton/: Algorithm.hs  Display.hs  Draw.hs  Layers.hs  Memo.hs  Types.hs
src/Data/: Memo.hs
src/Data/Derive/: Memo.hs
src/Data/Global/: Dynamic.hs  TH.hs
src/Data/Strict/: List.hs  Maybe.hs  NeList.hs
src/System/Mem/: MemoTable.hs  WeakKey.hs  WeakMap.hs  WeakRef.hs  WeakSet.hs  WeakTable.hs
src/System/Mem/Concurrent/: WeakMap.hs
src/System/Mem/StableName/: Exts.hs
stmshf/: LICENSE  Main.hs  stmshf.cabal
stmshf/Control/Concurrent/: SHFSTM.hs
stmshf/Control/Concurrent/SHFSTM/: Internal.hs
stmshf/Control/Concurrent/SHFSTM/Internal/: Debug.hs  TVar.hs  TransactionLog.hs
syb-with-class-and-effects/: Makefile  README  Setup.hs  syb-with-class-and-effects.cabal
syb-with-class-and-effects/src/Data/: DeepTypeable.hs
syb-with-class-and-effects/src/Data/WithClass/: MData.hs  MGenerics.hs
syb-with-class-and-effects/src/Data/WithClass/Derive/: DeepTypeable.hs  MData.hs
syb-with-class-and-effects/src/Data/WithClass/MGenerics/: Aliases.hs  Builders.hs  Instances.hs  Schemes.hs  Text.hs  Twins.hs
weak-ctrie/: weak-ctrie.cabal
weak-ctrie/Control/Concurrent/: Map.hs  WeakMap.hs
weak-ctrie/Control/Concurrent/Map/: Exts.hs
weak-ctrie/Control/Concurrent/Weak/: Map.hs
weak-hashtables/: weak-hashtables.cabal
weak-hashtables/src/Data/HashTable/Weak/: Class.hs  IO.hs
weak-hashtables/src/Data/HashTable/Weak/ST/: Basic.hs
