Name:            adapton
Version:         0.0.3
License:         BSD3
License-file:    LICENSE
Author:          Hugo Pacheco <hpacheco@cs.cornell.edu>
Maintainer:      Hugo Pacheco <hpacheco@cs.cornell.edu>
Synopsis:        Demand-driven incremental computation library
Description:
	
Homepage:        

Category: Performance

extra-source-files: 

Build-type: Simple
Cabal-Version:  >= 1.4

Library
  GHC-Options: -O3 -fforce-recomp
  Hs-Source-Dirs: src
  Build-Depends:        weak, syb, async, timeit, stm, abstract-deque, concurrent-extra, time, exceptions, weak-ctrie, random, base >= 4.3 && < 5, mtl >= 2.1.2, template-haskell >= 2.7.0.0, containers >= 0.4.2.1, ghc-prim >= 0.2.0.0, QuickCheck >= 2.7, transformers >= 0.3.0.0, haskell-src-exts, split >= 0.2.2, safe >= 0.3.3, hashtables, primitive, hashable, syb-with-class-and-effects, directory, filepath, process, derive, text, graphviz >= 2999.17.0.1, uuid >= 1.3.4, deepseq == 1.3.0.2, strict >= 0.3.2, unordered-containers, atomic-primops, weak-hashtables
  exposed-modules:
    Control.Concurrent.MVar.Exts
    Control.Concurrent.Lock.Exts
    Control.Monad.Incremental.Adapton
    Control.Monad.Incremental.Benchmark
    Control.Monad.Incremental.Display
    Control.Monad.Incremental.Draw
    Control.Monad.Incremental.Generics
    Control.Monad.Incremental.Internal.Adapton.Algorithm
    Control.Monad.Incremental.Internal.Adapton.Display
    Control.Monad.Incremental.Internal.Adapton.Draw
    Control.Monad.Incremental.Internal.Adapton.Layers
    Control.Monad.Incremental.Internal.Adapton.Memo
    Control.Monad.Incremental.Internal.Adapton.Types
    Control.Monad.Incremental.Internal.LazyNonInc.Algorithm
    Control.Monad.Incremental.Internal.LazyNonInc.Display
    Control.Monad.Incremental.Internal.LazyNonInc.Layers
    Control.Monad.Incremental.Internal.LazyNonInc.Memo
    Control.Monad.Incremental.Internal.LazyNonInc.Types
    Control.Monad.Incremental.LazyNonInc
    Control.Monad.Incremental.List
    Control.Monad.Incremental.Tree
    Control.Monad.Incremental
    Control.Concurrent.Future
    Control.Concurrent.Promise
    Control.Concurrent.Transactional.Benchmark
    Control.Concurrent.Transactional.Internal.TxAdapton.Algorithm
    Control.Concurrent.Transactional.Internal.TxAdapton.Layers
    Control.Concurrent.Transactional.Internal.TxAdapton.Memo
    Control.Concurrent.Transactional.Internal.TxAdapton.Types
    Control.Concurrent.Transactional.Internal.TxAdapton.Display
    Control.Concurrent.Transactional.Internal.TxAdapton.Draw
    Control.Concurrent.Transactional.STM
    Control.Concurrent.Transactional.TMVar
    Control.Concurrent.Transactional.TxAdapton
    Control.Concurrent.Transactional
    Data.Derive.Memo
    Data.Global.Dynamic
    Data.Global.TH
    Data.IORef.Exts
    Data.Memo
    Data.Strict.List
    Data.Strict.NeList
    System.Mem.MemoTable
    System.Mem.StableName.Exts
    System.Mem.WeakMap
    System.Mem.Concurrent.WeakMap

  Other-modules:
    Debug

  extensions: 
